# FaceRecognizer

./: .gitignore  CMakeLists.txt  Facerecognizer.sln  Facerecognizer.vcxproj  Facerecognizer.vcxproj.filters  README.md  main.cpp
header/: DataBase.h  FaceDetection.h  FaceModelTrainer.h  FaceRecognition.h  FileOperations.h  VideoCapture.h
source/: DataBase.cpp  FaceDetection.cpp  FaceModelTrainer.cpp  FaceRecognition.cpp  FileOperations.cpp  VideoCapture.cpp
